remove any and mssql drivers
 - any needs to go back to the drawing; the plan is to re-add this in a better way before 0.5
 - mssql is moving to closed source

--- a/sqlx-core/Cargo.toml
+++ b/sqlx-core/Cargo.toml
@@ -20,12 +20,10 @@ default = [ "migrate" ]
 migrate = [ "sha2", "crc" ]
 
 # databases
-all-databases = [ "postgres", "mysql", "sqlite", "mssql", "any" ]
+all-databases = [ "postgres", "mysql", "sqlite" ]
 postgres = [ "md-5", "sha2", "base64", "sha-1", "rand", "hmac", "futures-channel/sink", "futures-util/sink" ]
 mysql = [ "sha-1", "sha2", "generic-array", "num-bigint", "base64", "digest", "rand", "rsa" ]
 sqlite = [ "libsqlite3-sys" ]
-mssql = [ "uuid", "encoding_rs", "regex" ]
-any = []
 
 # types
 all-types = [ "chrono", "time", "bigdecimal", "decimal", "ipnetwork", "json", "uuid", "bit-vec" ]
