setup sqlx-core “next” as a staging ground
disable all other crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 members = [
+    "sqlx-core-next",
+
     # ".",
-    "sqlx-core",
-    "sqlx-rt",
+    # "sqlx-rt",
+    # "sqlx-core",
     # "sqlx-macros",
     # "sqlx-test",
     # "sqlx-cli",
